# safeserializer

./: README-edit.md  README.md  changelog.txt  pyproject.toml  release.sh
.github/workflows/: test.yml
docs/: compression.html  index.html
examples/: basic.py  benchmark.py  safe.py  unsafe.py
src/lazydf/: compression.py
src/safeserializer/: __init__.py  compression.py
