[tool.poetry]
name = "lazydf"
version = "0.220726.3"
description = "Hopefully safe and deterministic serializer to binary format, including Pandas data"
authors = ["davips <dpsabc@gmail.com>"]
license = "GPL"
readme = 'README.md'
packages = [
    { include = "lazydf", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10,<4.0"
orjson = "^3.7.8"
pymongo = "^4.2.0"  # Needed because it includes bson

[tool.poetry.dev-dependencies]
pdoc3 = "^0.10.0"
autoreadme = "^0.2102.20"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
ipython = "^8.4.0"
black = "^22.6.0"
flake8 = "^4.0.1"
click = "8.0.4"
lz4 = "^4.0.2"
numpy = "^1.23.1"
pandas = "^1.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
