[tool.poetry]
name = "safeserializer"
version = "0.230202.1"
description = "Hopefully safe and deterministic serializer to binary format, including Pandas data"
authors = ["davips <dpsabc@gmail.com>"]
license = "GPL"
readme = 'README.md'
packages = [
    { include = "safeserializer", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10,<4.0"
orjson = "^3.7.8"
pymongo = "^4.2.0"  # Needed because it includes the non buggy implementation of bson.
# Optional dependencies.
lz4 = { version = "^4.0.2", optional = true }
pandas = { version = "^1.4.3", optional = true }
dill = { version ="^0.3.6", optional = true }

[tool.poetry.extras]    #[tool.poetry.group.extras.dependencies]
full = ["lz4", "pandas", "dill"]

[tool.poetry.group.dev.dependencies]
pdoc3 = "^0.10.0"
autoreadme = "^0.2102.20"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
ipython = "^8.4.0"
black = "^22.6.0"
flake8 = "^4.0.1"
click = "8.0.4"
pyarrow = "^11.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
